<resources>
    <string name="app_name">insugraph</string>
    <string name="action_settings">Settings</string>
    <string name="action_insulin">Insulins</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_insulin_color">Select color</string>
    <string name="insulin_label_insulin">Insulin</string>
    <string name="insulin_label_dose">Dose injection</string>

    <string name="insulin_label_comment">Comment</string>
    <string name="injection_date_label">For date:</string>
    <string name="injection_date_text">dd.mm.yyyy</string>
    <string name="planned_none">None</string>
    <string name="planned_regular">Regular</string>
    <string name="planned_additionals">Additional</string>

    <string name="action_reinitdb">Reinit DB</string>
    <string name="insulin_desc_name">Insulin name:</string>
    <string name="insulin_desc_firm">Firm:</string>
    <string name="insulin_desc_type">Type:</string>
    <string name="insulin_desc_origin">Origin:</string>
    <string name="insulin_desc_start">Start:</string>
    <string name="insulin_desc_work">Work:</string>
    <string name="insulin_desc_ends">Ends:</string>
    <string name="insulin_desc_label_min">min:</string>
    <string name="insulin_desc_label_max">max:</string>
    <string name="button_insulin_update">Update</string>

    <string name="insulin_inject_insu">Insulin:</string>
    <string name="insulin_inject_dose">Dose:</string>
    <string name="insulin_inject_date">Date:</string>
    <string name="insulin_inject_time">Time:</string>
    <string name="insulin_inject_comm">Comment:</string>
    <string name="insulin_inject_plan">Planned:</string>


    <string name="title_activity_insulin_desc">InsulinDescActivity</string>
    <string name="action_insulins">Insulins</string>
    <string name="action_injections">Injections</string>
    <string name="injection_label">Injections</string>
    <string name="insulin_desc_max">Maximum:</string>
    <string name="label_mode_add">Add</string>
    <string name="label_mode_edit">Edit</string>
    <string name="insulin_label">Insulins</string>
    <string name="menu_event_add_inject">Add inject</string>
    <string name="menu_event_add_eating">Add eating</string>
    <string name="menu_event_add_action">Add action</string>
    <string name="menu_event_add_glucose">Add glucose</string>
    <string name="glucose_label_title">Glucose value:</string>
    <string name="glucose_add_label_concentration">Concentration</string>
    <string name="glucose_add_title">Add glucose reading result</string>
    <string name="glucose_add_label_comment">Comment</string>
    <string name="glucose_add_label_measure">mmol/L</string>

    <string name="common_label_time">Time</string>
    <string name="common_label_date">Date</string>
    <string name="diary_action_label">Actions list</string>
    <string name="action_graph">Diagram</string>
    <string name="insulin_inject_label_type">Injection type</string>
    <string name="injection_total_label">Total dose:</string>
    <string name="tv_injection_total_value">0</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="insulin_inject_unit">unit(s)</string>
    <string name="glucose_add_label_when">When reading</string>

</resources>
