<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_action_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/injection_date_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/tv_diary_actions_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/injection_date_text"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>





        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lv_diary_action_list"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/injection_total_label"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/tv_injection_total_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/tv_injection_total_value"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>


</LinearLayout>

