<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/insulin_inject_item"
    android:padding="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_inject"
        android:src="@drawable/ic_inject"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_inject_insu"
            android:id="@+id/textView"
            android:layout_weight="2"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_insulin"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_inject_dose"
            android:id="@+id/textView2"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dose"
            android:layout_weight="1"
            android:text="6"
            style="@android:style/TextAppearance.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_inject_time"
            android:id="@+id/textView3"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tv_time"
            android:layout_weight="1"
            android:text="8:00"
            style="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_comment"
            android:hint="@string/insulin_inject_comm"
            android:text="..."
            style="@android:style/TextAppearance.Medium"
            android:layout_weight="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_planned"
            android:hint="@string/insulin_inject_plan"
            android:text="..."
            style="@android:style/TextAppearance.Medium"
            android:layout_weight="2" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>