<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/insulin_desc_item"
    android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_label_insulin"
            android:id="@+id/tv_insulin_label_insulin"
            android:layout_weight="2"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_insulin"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_desc_firm"
            android:id="@+id/tv_insulin_desc_firm"
            android:layout_weight="2"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_firm"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_desc_type"
            android:id="@+id/tv_insulin_desc_type"
            android:layout_weight="2"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_type"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insulin_desc_work"
            android:id="@+id/tv_insulin_desc_work"
            android:layout_weight="2"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_work"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium" />
    </LinearLayout>

</LinearLayout>